// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Testing snapshot for Braze's upsertCatalogItem destination action: it should work with batched events with delete syncmode 1`] = `
Headers {
  Symbol(map): Object {
    "authorization": Array [
      "Bearer undefined",
    ],
    "content-type": Array [
      "application/json",
    ],
    "user-agent": Array [
      "Segment (Actions)",
    ],
  },
}
`;

exports[`Testing snapshot for Braze's upsertCatalogItem destination action: it should work with batched events with delete syncmode 2`] = `
Object {
  "items": Array [
    Object {
      "id": "car001",
    },
    Object {
      "id": "car002",
    },
  ],
}
`;

exports[`Testing snapshot for Braze's upsertCatalogItem destination action: it should work with batched events with upsert syncmode 1`] = `
Headers {
  Symbol(map): Object {
    "authorization": Array [
      "Bearer undefined",
    ],
    "content-type": Array [
      "application/json",
    ],
    "user-agent": Array [
      "Segment (Actions)",
    ],
  },
}
`;

exports[`Testing snapshot for Braze's upsertCatalogItem destination action: it should work with batched events with upsert syncmode 2`] = `
Object {
  "items": Array [
    Object {
      "discontinued": false,
      "id": "car001",
      "inception_date": "2012-06-22T04:00:00Z",
      "name": "Model S",
      "price": 79999.99,
    },
    Object {
      "discontinued": false,
      "id": "car002",
      "inception_date": "2012-06-22T04:00:00Z",
      "name": "Model S",
      "price": 79999.99,
    },
  ],
}
`;

exports[`Testing snapshot for Braze's upsertCatalogItem destination action: required fields 1`] = `
Object {
  "items": Array [
    Object {
      "testType": "QHsZ3qpWie",
    },
  ],
}
`;

exports[`Testing snapshot for Braze's upsertCatalogItem destination action: single event with delete should not throw error if item doesnt exist 1`] = `
Object {
  "items": Array [
    Object {
      "testType": "QHsZ3qpWie",
    },
  ],
}
`;

exports[`Testing snapshot for Braze's upsertCatalogItem destination action: single event with delete should not throw error if item doesnt exist 2`] = `"{\\"items\\":[{\\"testType\\":\\"QHsZ3qpWie\\"}]}"`;

exports[`Testing snapshot for Braze's upsertCatalogItem destination action: single event with delete should not throw error if item doesnt exist 3`] = `
Headers {
  Symbol(map): Object {
    "authorization": Array [
      "Bearer QHsZ3qpWie",
    ],
    "content-type": Array [
      "application/json",
    ],
    "user-agent": Array [
      "Segment (Actions)",
    ],
  },
}
`;

exports[`Testing snapshot for Braze's upsertCatalogItem destination action: single event with delete should work 1`] = `
Object {
  "items": Array [
    Object {
      "testType": "QHsZ3qpWie",
    },
  ],
}
`;

exports[`Testing snapshot for Braze's upsertCatalogItem destination action: single event with invalid sync mode should fail 1`] = `"Invalid syncMode, must be set to \\"upsert\\" or \\"delete\\""`;

exports[`Testing snapshot for Braze's upsertCatalogItem destination action: single event with upsert should fail if there is no item object 1`] = `"Item is required"`;
